--- a/src/Navbar.scss
+++ b/src/Navbar.scss
@@ -2,9 +2,10 @@ nav {
     display: flex;
     padding: 1rem;
     box-shadow: 0 .2rem .5rem rgba(0,0,0,.2);
+    background-color: #03dac6;
 
     a {
-        color: #2e3440;
+        color: black;
         text-decoration: none;
     }
 }
