--- a/src/Artist.scss
+++ b/src/Artist.scss
@@ -17,16 +17,30 @@
     border-radius: 3px;
     box-shadow: 0 .2rem .5rem rgba(0,0,0,.2);
     text-decoration: none;
-    background-color: #121212;
+    background-color: #191c22;
     color: #bb86fc;
+    border: 2px solid transparent;
 
     &:hover {
         .artist-name {
             color: #03dac6;
         }
+        border: 2px solid #03dac6;
     }
 
     .artist-name {
         font-size: 1.2rem;
+        margin-bottom: .5rem;
     }
+
+    .artist-disambiguation {
+        color: magenta;
+        margin-bottom: .5rem;
+    }
+
+    .artist-aliases {
+        color: white;
+        font-size: .8rem;
+    }
+
 }
