--- a/src/SearchBar.scss
+++ b/src/SearchBar.scss
@@ -6,5 +6,7 @@
         width: 300px;
         background-color: #2e3440;
         color: white;
+        border-radius: 5px;
+        border: 0;
     }
 }
