search bar styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
+@import "./Searchbar.scss";
+
 body {
-    margin: 0;
-    background-color: #232831;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  background-color: #232831;
+  font-family: "Open Sans", sans-serif;
 }
