--- a/src/Navbar.scss
+++ b/src/Navbar.scss
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     padding: 1rem;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.2);
+    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
     background-color: #03dac6;
 
     a {
