--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 body {
     margin: 0;
     background-color: #232831;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
