--- a/src/ArtistDetail.scss
+++ b/src/ArtistDetail.scss
@@ -10,9 +10,6 @@
   color: #b2b2b2;
 }
 
-.info-container {
-}
-
 .title {
   font-size: 3rem;
 }
@@ -30,7 +27,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 35%;
+  width: 45%;
 }
 
 .release-img {
@@ -39,4 +36,10 @@ h1 {
 
 .release-img:hover {
   opacity: 0.5;
+}
+
+@media only screen and (max-width: 1200px) {
+  .detail-info {
+    width: 80%;
+  }
 }
