--- a/src/Navbar.scss
+++ b/src/Navbar.scss
@@ -1,11 +1,18 @@
 nav {
-    display: flex;
-    padding: 1rem;
-    box-shadow: 0 .2rem .5rem rgba(0,0,0,.2);
-    background-color: #03dac6;
+  display: flex;
+  padding: 1rem;
+  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
+  background-color: #03dac6;
 
-    a {
-        color: black;
-        text-decoration: none;
-    }
+  a {
+    color: black;
+    text-decoration: none;
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+  }
+}
+
+.logo {
+  width: 3rem;
+  margin-right: 1rem;
 }
